# uFSM

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .todo  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: auto-clang-format.yml  ci.yml  main.yml
benchmarks/: CMakeLists.txt  bench_animation.cpp
benchmarks/stopwatch/: stopwatch.h
ci/: Dockerfile  build.sh
ci/clang/: Dockerfile
cmake/: assertions.cmake  build_cache.cmake  build_type.cmake  clang_tidy.cmake  colors.cmake  config.cmake  copy_if_different.cmake  coverage.cmake  doxygen.cmake  enable_ipo.cmake  get_win32_ver.cmake  objcopy_target.cmake  openocd.cmake  options.cmake  output_directories.cmake  packageConfig.cmake.in  prefix.cmake  prevent_in_source_build.cmake  project_config.cmake  project_install.cmake  release.cmake  sanitizers.cmake  static_analysis.cmake  symbol_visibility.cmake  uFSMConfig.cmake.in
examples/: CMakeLists.txt  animation.cpp  calculator.cpp  composite.cpp  composite2.cpp  trace_logger.hpp
include/: CMakeLists.txt
include/ufsm/: action.hpp  any_event.hpp  dispatch_event.hpp  enter_substate.hpp  entry_action.hpp  entry_policy.hpp  exit_action.hpp  fsm.hpp  fsm_impl.hpp  fsm_state.hpp  fsmfwd.hpp  get.hpp  initial_state.hpp  logging.hpp  next_state.hpp  state_index.hpp  state_traits.hpp  state_transition.hpp  traits.hpp  transition_guard.hpp  transition_table.hpp  try_dispatch.hpp  try_exit.hpp  try_set_initial_state.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt
